force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_AggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>CBK_AggregateQueries__c</fullName>
    <description>Almacenamiento de Aggregate Queries</description>
    <label>Aggregate Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>