force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_ApexClass__c.field-meta.xml
<CustomField>
    <fullName>CBK_ApexClass__c</fullName>
    <description>Clase Apex de la que se guarda el log</description>
    <label>Apex Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>