force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>CBK_ApexMethod__c</fullName>
    <description>Método de Apex a informar en el log</description>
    <label>Apex Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>