force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_AsyncCalls__c.field-meta.xml
<CustomField>
    <fullName>CBK_AsyncCalls__c</fullName>
    <description>Campo para almacenar los llamadas asíncronas realizadas.</description>
    <label>Async Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>