force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_Callouts__c.field-meta.xml
<CustomField>
    <fullName>CBK_Callouts__c</fullName>
    <description>Almacenamiento de Callouts</description>
    <label>Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>