force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_CpuTime__c.field-meta.xml
<CustomField>
    <fullName>CBK_CpuTime__c</fullName>
    <description>Almacenamiento de Cpu Time</description>
    <label>Cpu Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>