force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CBK_CreatedDate__c</fullName>
    <description>Campo Inicio para sincronizar entidades (CBK_Log, CBK_LogEvent)</description>
    <label>Inicio</label>
    <type>DateTime</type>
</CustomField>