force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_DMLRows__c.field-meta.xml
<CustomField>
    <fullName>CBK_DMLRows__c</fullName>
    <description>Almacenamiento de DML Rows</description>
    <label>DML Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>