force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_DMLStatements__c.field-meta.xml
<CustomField>
    <fullName>CBK_DMLStatements__c</fullName>
    <description>Almacenamiento de DML Statements</description>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>