force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_EmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>CBK_EmailInvocations__c</fullName>
    <description>Almacenamiento de Email Invocations</description>
    <label>Email Invocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>