force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>CBK_Error_Code__c</fullName>
    <description>Campo Error Code para sincronizar entidades (CBK_Log, CBK_LogEvent)</description>
    <inlineHelpText>Campo Error Code para sincronizar entidades (CBK_Log, CBK_LogEvent)</inlineHelpText>
    <label>Error Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>