force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_FutureCalls__c.field-meta.xml
<CustomField>
    <fullName>CBK_FutureCalls__c</fullName>
    <description>Almacenamiento de FutureCalls</description>
    <label>Future Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>