force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_hdExchangeParentMessageId__c.field-meta.xml
<CustomField>
    <fullName>CBK_hdExchangeParentMessageId__c</fullName>
    <label>hdExchangeParentMessageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>