force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_hdMessageID__c.field-meta.xml
<CustomField>
    <fullName>CBK_hdMessageID__c</fullName>
    <label>hdMessageID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>