force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_hdResentFrom__c.field-meta.xml
<CustomField>
    <fullName>CBK_hdResentFrom__c</fullName>
    <label>hdResentFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>