force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_hdSFDCOriginalRCPT__c.field-meta.xml
<CustomField>
    <fullName>CBK_hdSFDCOriginalRCPT__c</fullName>
    <label>hdSFDCOriginalRCPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>