force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_hdTo__c.field-meta.xml
<CustomField>
    <fullName>CBK_hdTo__c</fullName>
    <label>hdTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>