force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitAsyncCalls__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitAsyncCalls__c</fullName>
    <description>Almacenamiento de Limit Async Calls</description>
    <label>Limit Async Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>