force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitCallouts__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitCallouts__c</fullName>
    <description>Almacenamiento de Limit Callouts</description>
    <label>Limit Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>