force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitCpuTime__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitCpuTime__c</fullName>
    <description>Almacenamiento de Limit Cpu Time</description>
    <label>Limit Cpu Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>