force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitDMLRows__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitDMLRows__c</fullName>
    <description>Almacenamiento de Limit DML Rows</description>
    <label>Limit DML Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>