force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitDMLStatements__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitDMLStatements__c</fullName>
    <description>Almacenamiento de Limit DML Statements</description>
    <label>Limit DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>