force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitEmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitEmailInvocations__c</fullName>
    <description>Almacenamiento de Limit Email Invocations</description>
    <label>Limit Email Invocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>