force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitHeapSize__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitHeapSize__c</fullName>
    <description>Almacenamiento de Limit Heap Size</description>
    <label>Limit Heap Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>