force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitMobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitMobilePushApexCalls__c</fullName>
    <description>Almacenamiento de Limit Mobile Push ApexCalls</description>
    <label>Limit Mobile Push ApexCalls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>