force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LimitQueryRows__c.field-meta.xml
<CustomField>
    <fullName>CBK_LimitQueryRows__c</fullName>
    <description>Almacenamiento de Limit Query Rows</description>
    <label>Limit Query Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>