force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_LineNumber__c.field-meta.xml
<CustomField>
    <fullName>CBK_LineNumber__c</fullName>
    <description>Nº de línea a informar en el log</description>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>