force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_Log_Message_Ext__c.field-meta.xml
<CustomField>
    <fullName>CBK_Log_Message_Ext__c</fullName>
    <description>Campo Log Message para sincronizar entre entidades (CBK_Log, CBK_LogEvent)</description>
    <inlineHelpText>Campo Log Message para sincronizar entre entidades (CBK_Log, CBK_LogEvent)</inlineHelpText>
    <label>Log Message - Extended</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>