force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_MessageException__c.field-meta.xml
<CustomField>
    <fullName>CBK_MessageException__c</fullName>
    <label>Message Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>