force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_MobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>CBK_MobilePushApexCalls__c</fullName>
    <description>Almacenamiento de Mobile Push Apex Calls</description>
    <label>Mobile Push Apex Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>