force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_QueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>CBK_QueryLocatorRows__c</fullName>
    <description>Almacenamiento de Query Locator Rows</description>
    <label>Query Locator Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>