force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_QueryRows__c.field-meta.xml
<CustomField>
    <fullName>CBK_QueryRows__c</fullName>
    <description>Almacenamiento de Query Rows</description>
    <label>Query Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>