force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_sfdcMessageId__c.field-meta.xml
<CustomField>
    <fullName>CBK_sfdcMessageId__c</fullName>
    <label>sfdcMessageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>