force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_sfdcRecordType__c.field-meta.xml
<CustomField>
    <fullName>CBK_sfdcRecordType__c</fullName>
    <label>sfdcRecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>