force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_sfdcReplyTo__c.field-meta.xml
<CustomField>
    <fullName>CBK_sfdcReplyTo__c</fullName>
    <label>sfdcReplyTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>