force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_sfdcResultDetail__c.field-meta.xml
<CustomField>
    <fullName>CBK_sfdcResultDetail__c</fullName>
    <label>sfdcResultDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>