force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_SoslQueries__c.field-meta.xml
<CustomField>
    <fullName>CBK_SoslQueries__c</fullName>
    <description>Almacenamiento de Sosl Queries</description>
    <label>Sosl Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>