force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_State__c.field-meta.xml
<CustomField>
    <fullName>CBK_State__c</fullName>
    <description>Campo Estado para sincronizar entre entidades (CBK_Log, CBK_LogEvent)</description>
    <inlineHelpText>Campo Estado para sincronizar entre entidades (CBK_Log, CBK_LogEvent)</inlineHelpText>
    <label>Estado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>