force-app/main/default/objects/CBK_LogEvent__e/fields/CBK_SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>CBK_SystemModstamp__c</fullName>
    <description>Campo SystemModstamp para sincronizar entidades (CBK_Log, CBK_LogEvent)</description>
    <label>SystemModstamp</label>
    <type>DateTime</type>
</CustomField>