force-app/main/default/objects/CBK_LogEvent__e/fields/txt_Detail__c.field-meta.xml
<CustomField>
    <fullName>txt_Detail__c</fullName>
    <label>txt_Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>