force-app/main/default/objects/CBK_LogEvent__e/fields/txt_ErrType__c.field-meta.xml
<CustomField>
    <fullName>txt_ErrType__c</fullName>
    <label>txt_ErrType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>