force-app/main/default/objects/CBK_LogEvent__e/fields/txt_FromAddress__c.field-meta.xml
<CustomField>
    <fullName>txt_FromAddress__c</fullName>
    <label>txt_FromAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>