force-app/main/default/objects/CBK_LogEvent__e/fields/txt_Level__c.field-meta.xml
<CustomField>
    <fullName>txt_Level__c</fullName>
    <label>txt_Level</label>
    <length>15</length>
    <type>Text</type>
</CustomField>