force-app/main/default/objects/CBK_LogEvent__e/fields/txt_Message__c.field-meta.xml
<CustomField>
    <fullName>txt_Message__c</fullName>
    <label>txt_Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>