force-app/main/default/objects/CBK_LogEvent__e/fields/txt_stacktrace__c.field-meta.xml
<CustomField>
    <fullName>txt_stacktrace__c</fullName>
    <label>txt_stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>