force-app/main/default/objects/CBK_LogEvent__e/fields/txt_ToAddress__c.field-meta.xml
<CustomField>
    <fullName>txt_ToAddress__c</fullName>
    <label>txt_ToAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>